# ComfyUI-RefUNet

./: README.md  __init__.py  pyproject.toml
example_workflows/: ref_workflow_example.json
modules/: ref_block.py
nodes/: configure_ref_net_node.py  custom_ref_map_node.py  prepare_ref_latents.py  read_sampler_node.py  ref_bank_node.py  ref_model_pred_node.py  vision_clip_encode_node.py  write_sampler_node.py
utils/: dilate_mask.py  ref_constants.py  sampler_utils.py
